src/index/tests/snapshots/rusty__index__tests__instance_resolver_tests__global_struct_variables_are_retrieved.snap
---
source: src/index/tests/instance_resolver_tests.rs
assertion_line: 80
expression: "index.find_instances().collect::<Vec<Instance<'_>>>()"

---
[
    (
        QualifiedName {
            names: [
                Name(
                    "gStr",
                ),
            ],
        },
        VariableIndexEntry {
            name: "gStr",
            qualified_name: "gStr",
            initial_value: None,
            variable_type: Global,
            is_constant: false,
            data_type_name: "str",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceRange {
                range: 95..99,
            },
        },
    ),
    (
        QualifiedName {
            names: [
                Name(
                    "gStr",
                ),
                Name(
                    "a",
                ),
            ],
        },
        VariableIndexEntry {
            name: "a",
            qualified_name: "str.a",
            initial_value: None,
            variable_type: Local,
            is_constant: false,
            data_type_name: "DINT",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceRange {
                range: 32..33,
            },
        },
    ),
    (
        QualifiedName {
            names: [
                Name(
                    "gStr",
                ),
                Name(
                    "b",
                ),
            ],
        },
        VariableIndexEntry {
            name: "b",
            qualified_name: "str.b",
            initial_value: None,
            variable_type: Local,
            is_constant: false,
            data_type_name: "DINT",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SourceRange {
                range: 34..35,
            },
        },
    ),
    (
        QualifiedName {
            names: [
                Name(
                    "MainProg",
                ),
            ],
        },
        VariableIndexEntry {
            name: "MainProg_instance",
            qualified_name: "MainProg",
            initial_value: None,
            variable_type: Global,
            is_constant: false,
            data_type_name: "MainProg",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceRange {
                range: 123..195,
            },
        },
    ),
    (
        QualifiedName {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "pStr",
                ),
            ],
        },
        VariableIndexEntry {
            name: "pStr",
            qualified_name: "MainProg.pStr",
            initial_value: None,
            variable_type: Local,
            is_constant: false,
            data_type_name: "str",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceRange {
                range: 156..160,
            },
        },
    ),
    (
        QualifiedName {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "pStr",
                ),
                Name(
                    "a",
                ),
            ],
        },
        VariableIndexEntry {
            name: "a",
            qualified_name: "str.a",
            initial_value: None,
            variable_type: Local,
            is_constant: false,
            data_type_name: "DINT",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceRange {
                range: 32..33,
            },
        },
    ),
    (
        QualifiedName {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "pStr",
                ),
                Name(
                    "b",
                ),
            ],
        },
        VariableIndexEntry {
            name: "b",
            qualified_name: "str.b",
            initial_value: None,
            variable_type: Local,
            is_constant: false,
            data_type_name: "DINT",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SourceRange {
                range: 34..35,
            },
        },
    ),
]
