src/index/tests/snapshots/rusty__index__tests__instance_resolver_tests__global_vars_are_retrieved.snap
---
source: src/index/tests/instance_resolver_tests.rs
expression: "index.find_instances().collect::<Vec<Instance<'_>>>()"
---
[
    (
        ExpressionPath {
            names: [
                Name(
                    "a",
                ),
            ],
        },
        VariableIndexEntry {
            name: "a",
            qualified_name: "a",
            initial_value: None,
            argument_type: ByVal(
                Global,
            ),
            is_constant: false,
            data_type_name: "INT",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 2,
                source_range: SourceRange {
                    range: 20..21,
                },
            },
            varargs: None,
            accessing_type: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "b",
                ),
            ],
        },
        VariableIndexEntry {
            name: "b",
            qualified_name: "b",
            initial_value: None,
            argument_type: ByVal(
                Global,
            ),
            is_constant: false,
            data_type_name: "INT",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 2,
                source_range: SourceRange {
                    range: 22..23,
                },
            },
            varargs: None,
            accessing_type: None,
        },
    ),
]
