src/index/tests/snapshots/rusty__index__tests__instance_resolver_tests__nested_global_struct_variables_are_retrieved.snap
---
source: src/index/tests/instance_resolver_tests.rs
expression: "index.find_instances().collect::<Vec<Instance<'_>>>()"
---
[
    (
        ExpressionPath {
            names: [
                Name(
                    "gStr",
                ),
            ],
        },
        VariableIndexEntry {
            name: "gStr",
            qualified_name: "gStr",
            initial_value: None,
            variable_type: ByVal(
                Global,
            ),
            is_constant: false,
            data_type_name: "str",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 10,
                range: SourceRange {
                    range: 167..171,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "gStr",
                ),
                Name(
                    "a",
                ),
            ],
        },
        VariableIndexEntry {
            name: "a",
            qualified_name: "str.a",
            initial_value: None,
            variable_type: ByVal(
                Input,
            ),
            is_constant: false,
            data_type_name: "str2",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 2,
                range: SourceRange {
                    range: 32..33,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "gStr",
                ),
                Name(
                    "a",
                ),
                Name(
                    "c",
                ),
            ],
        },
        VariableIndexEntry {
            name: "c",
            qualified_name: "str2.c",
            initial_value: None,
            variable_type: ByVal(
                Input,
            ),
            is_constant: false,
            data_type_name: "DINT",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 6,
                range: SourceRange {
                    range: 104..105,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "gStr",
                ),
                Name(
                    "a",
                ),
                Name(
                    "d",
                ),
            ],
        },
        VariableIndexEntry {
            name: "d",
            qualified_name: "str2.d",
            initial_value: None,
            variable_type: ByVal(
                Input,
            ),
            is_constant: false,
            data_type_name: "DINT",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 6,
                range: SourceRange {
                    range: 106..107,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "gStr",
                ),
                Name(
                    "b",
                ),
            ],
        },
        VariableIndexEntry {
            name: "b",
            qualified_name: "str.b",
            initial_value: None,
            variable_type: ByVal(
                Input,
            ),
            is_constant: false,
            data_type_name: "str2",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 2,
                range: SourceRange {
                    range: 34..35,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "gStr",
                ),
                Name(
                    "b",
                ),
                Name(
                    "c",
                ),
            ],
        },
        VariableIndexEntry {
            name: "c",
            qualified_name: "str2.c",
            initial_value: None,
            variable_type: ByVal(
                Input,
            ),
            is_constant: false,
            data_type_name: "DINT",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 6,
                range: SourceRange {
                    range: 104..105,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "gStr",
                ),
                Name(
                    "b",
                ),
                Name(
                    "d",
                ),
            ],
        },
        VariableIndexEntry {
            name: "d",
            qualified_name: "str2.d",
            initial_value: None,
            variable_type: ByVal(
                Input,
            ),
            is_constant: false,
            data_type_name: "DINT",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 6,
                range: SourceRange {
                    range: 106..107,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
            ],
        },
        VariableIndexEntry {
            name: "MainProg_instance",
            qualified_name: "MainProg",
            initial_value: None,
            variable_type: ByVal(
                Global,
            ),
            is_constant: false,
            data_type_name: "MainProg",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 12,
                range: SourceRange {
                    range: 195..267,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "pStr",
                ),
            ],
        },
        VariableIndexEntry {
            name: "pStr",
            qualified_name: "MainProg.pStr",
            initial_value: None,
            variable_type: ByVal(
                Local,
            ),
            is_constant: false,
            data_type_name: "str",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 14,
                range: SourceRange {
                    range: 228..232,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "pStr",
                ),
                Name(
                    "a",
                ),
            ],
        },
        VariableIndexEntry {
            name: "a",
            qualified_name: "str.a",
            initial_value: None,
            variable_type: ByVal(
                Input,
            ),
            is_constant: false,
            data_type_name: "str2",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 2,
                range: SourceRange {
                    range: 32..33,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "pStr",
                ),
                Name(
                    "a",
                ),
                Name(
                    "c",
                ),
            ],
        },
        VariableIndexEntry {
            name: "c",
            qualified_name: "str2.c",
            initial_value: None,
            variable_type: ByVal(
                Input,
            ),
            is_constant: false,
            data_type_name: "DINT",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 6,
                range: SourceRange {
                    range: 104..105,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "pStr",
                ),
                Name(
                    "a",
                ),
                Name(
                    "d",
                ),
            ],
        },
        VariableIndexEntry {
            name: "d",
            qualified_name: "str2.d",
            initial_value: None,
            variable_type: ByVal(
                Input,
            ),
            is_constant: false,
            data_type_name: "DINT",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 6,
                range: SourceRange {
                    range: 106..107,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "pStr",
                ),
                Name(
                    "b",
                ),
            ],
        },
        VariableIndexEntry {
            name: "b",
            qualified_name: "str.b",
            initial_value: None,
            variable_type: ByVal(
                Input,
            ),
            is_constant: false,
            data_type_name: "str2",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 2,
                range: SourceRange {
                    range: 34..35,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "pStr",
                ),
                Name(
                    "b",
                ),
                Name(
                    "c",
                ),
            ],
        },
        VariableIndexEntry {
            name: "c",
            qualified_name: "str2.c",
            initial_value: None,
            variable_type: ByVal(
                Input,
            ),
            is_constant: false,
            data_type_name: "DINT",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 6,
                range: SourceRange {
                    range: 104..105,
                },
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "pStr",
                ),
                Name(
                    "b",
                ),
                Name(
                    "d",
                ),
            ],
        },
        VariableIndexEntry {
            name: "d",
            qualified_name: "str2.d",
            initial_value: None,
            variable_type: ByVal(
                Input,
            ),
            is_constant: false,
            data_type_name: "DINT",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SymbolLocation {
                line_number: 6,
                range: SourceRange {
                    range: 106..107,
                },
            },
            varargs: None,
        },
    ),
]
